--- a/about.html
+++ b/about.html
@@ -20,17 +20,37 @@
         <div class="navigation">
             <h1><a href="index.html">Valia Liu</a></h1>
             <hr>
-            <!-- <ol class="category">
-                <li>Editorial Design</li><br>
-                <li>Poster</li><br>
-                <li>3D Modeling</li><br>
-                <li>Video / Animation</li><br>
-                <li>Website</li><br>
-                <li>Others</li><br>
-            </ol> -->
+            <h1 class="category disable">
+                <input type="checkbox" id="posterc">&nbsp Poster<br>
+                <input type="checkbox" id="editorialc">&nbsp Editorial<br>
+                <input type="checkbox" id="webc">&nbsp Website<br>
+                <input type="checkbox" id="modelingc">&nbsp Modeling<br>
+                <input type="checkbox" id="brandingc">&nbsp Branding<br>
+                <input type="checkbox" id="videoc">&nbsp Video<br>
+                <input type="checkbox" id="otherc">&nbsp Others<br></h1>
             <hr>
             <h1><a href="about.html">About</a></h1>
-            <h1><a href="mailto:valialiuwork@gmail.com" target="_blank">Email</a></h1>
+            <h1><a href="mailto:valialiuwork@gmail.com" target="_blank">Email↗</a></h1>
+        </div>
+
+        <div class="home">
+            <h2 style="width: 60%; display:inline-block;">
+                A graphic designer specializing in creative direction, typographic systems, web design, and decorative form design. Had more than 170 individual customers as freelance designer, illustrator and craftsman.
+                <br><br>
+                BFA in Graphic Design from <a href="https://risd.gd/" target="_blank" style="text-decoration:underline;">Rhode Island School of Design</a>.
+                <br><br>
+                <a href="mailto:valialiuwork@gmail.com" target="_blank" style="text-decoration:underline;">Contact</a> for any work related inquiries. Resume and CV available upon request.
+                <br><br>
+                <a href="https://www.instagram.com/not_valya/?igshid=YmMyMTA2M2Y%3D" target="_blank" style="text-decoration:underline;">Instagram</a><br>
+                <a href="https://github.com/Valiaaa" target="_blank" style="text-decoration:underline;">Github</a><br>
+                <a href="https://vimeo.com/user189269341" target="_blank" style="text-decoration:underline;">Vimeo</a><br>
+                <br>
+                Work History:<br>
+                Eden – Branding, visual system, and web design.<br>
+                <a href="https://www.shsymphony.com/" target="_blank" style="text-decoration:underline;">Shanghai Symphony Orchestra</a> – Designer assistant.<br>
+                <a href="https://www.shphschool.com/" target="_blank" style="text-decoration:underline;">Shanghai Pinghe Bilingual School</a> – Visual identities for school size activities and ceremonies, yearbook cover for the class of 2019.
+            </h2>
+            <img src="portrait.jpg" style="width: 38%; display:block; float: right;">
         </div>
     </body>
 </html>
