--- a/index.html
+++ b/index.html
@@ -57,10 +57,7 @@
 
         <div class="home main">
             <!-- <a href="archive/midnight_blues_u/midnight_blues_u.html"> -->
-                <video width="100%" height="auto" autoplay loop muted>
-                    <source src="archive/second_best/SECOND BEST.mp4" type="video/mp4">
-                    Your browser does not support the video tag.
-                </video>
+                <div style="padding:75% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/789396762?autoplay=1&loop=1&autopause=0&muted=1"  frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Second Best"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
             </a>
             <br><br>
             <h1 class="title">
@@ -78,7 +75,7 @@
                 </a>
             </div>
             <br>
-            <h1 class="title"><a href="archive/midnight_blues_u/midnight_blues_u.html">Midnight <span style="font-style: italic;">(Blues)</span> &U<br>Modeling & Vinyl Design</a></h1>
+            <h1 class="title"><a href="archive/midnight_blues_u/midnight_blues_u.html">Midnight <span style="font-style: italic;">(Blues)</span> &U<br>Model & Vinyl Design</a></h1>
             <br><hr><br><br>
 
 
@@ -134,12 +131,7 @@
             <br><hr><br><br>
 
             
-            <a href="archive/micro_nova/micro nova.html">
-                <video width="100%" height="auto" style="cursor: url('pointer.png') 15 0,auto;" class="videoa" autoplay loop muted>
-                    <source src="archive/micro_nova/micro nova.MP4" type="video/mp4">
-                  Your browser does not support the video tag.
-                </video>
-            </a>
+            <div style="padding:56.39% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/789396542?autoplay=1&loop=1&autopause=0&muted=1"  frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Second Best"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
             <br><br>
             <h1 class="title"><a href="archive/micro_nova/micro nova.html">MicroNova<br>Frame-by-frame Animation</a></h1>
             <br>
