--- a/index.html
+++ b/index.html
@@ -25,6 +25,19 @@
             .pic22 {
                 display: none;
             }
+
+            h1 {
+                font-size: 22px;
+                line-height: 30px;
+            }
+
+            .home {
+                line-height: 0.2;
+            }
+
+            .title {
+                margin-top: 3%;
+            }
         }
     </style>
 
