--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
             }
 
             .portrait {
-                transform: scale(1.5) translate(8px, 14px);
+                transform: scale(1.5) translate(8px, 16px);
             }
 
             .abt {
@@ -84,7 +84,7 @@
                 <a href="https://github.com/Valiaaa" target="_blank" style="text-decoration:underline;">Github</a><br>
                 <a href="https://vimeo.com/user189269341" target="_blank" style="text-decoration:underline;">Vimeo</a><br>
                 <br>
-                Work History:<br>
+                Working Experience:<br>
                 Eden – Branding, visual system, and web design.<br>
                 <a href="https://www.shsymphony.com/" target="_blank" style="text-decoration:underline;">Shanghai Symphony Orchestra</a> – Designer assistant.<br>
                 <a href="https://www.shphschool.com/" target="_blank" style="text-decoration:underline;">Shanghai Pinghe Bilingual School</a> – Visual identities for school size activities and ceremonies, yearbook cover for the class of 2019.
