--- a/about.html
+++ b/about.html
@@ -35,16 +35,18 @@
         @media screen and (max-width: 640px) {
 
             .portraitf {
-                width: 28vw;
-                height: 28vw;
+                width: 50%;
+                height: 36vw;
+                margin-top: 20px;
             }
 
             .portrait {
-                transform: scale(1.5) translate(8px, 16px);
+                transform: scale(1.4) translate(8px, 8px);
             }
 
             .abt {
-            width: 70%; 
+                width: 100%;
+
         }
         }
     </style>
