--- a/index.html
+++ b/index.html
@@ -52,18 +52,16 @@
             <h1><a href="index.html">Valia Liu</a></h1>
             <hr>
             <h1 class="category">
+                <input type="checkbox" id="albumc">&nbsp Album<br>
                 <input type="checkbox" id="posterc">&nbsp Poster<br>
+                <input type="checkbox" id="videoc">&nbsp Video<br>
                 <input type="checkbox" id="editorialc">&nbsp Editorial<br>
-                <input type="checkbox" id="webc">&nbsp Website<br>
                 <input type="checkbox" id="modelingc">&nbsp Modeling<br>
                 <input type="checkbox" id="brandingc">&nbsp Branding<br>
-                <input type="checkbox" id="videoc">&nbsp Video<br>
-                <input type="checkbox" id="otherc">&nbsp Others<br>
             </h1>
             <hr>
             <h1><a href="about.html">About</a></h1>
             <h1><a href="mailto:valialiuwork@gmail.com" target="_blank">Email↗</a></h1>
-            <br><h1>* This site is under construction. The navigation filter is currently unavailable. <br>Sry :(((</h1>
         </div>
 
 
@@ -208,9 +206,64 @@
             <br><br>
             <h1 class="title"><a href="archive/millerknoll/millerknoll.html">MillerKnoll Workspace Research Library<br>Branding</a></h1>
             <!-- <br><hr><br><br> -->
+        </div>
 
 
-
-        <div class="home navi"></div>
+        <div class="home filter">
+            <h2 class="video">
+                <!-- <a href="archive/midnight_blues_u/midnight_blues_u.html"> -->
+                    <img src="archive/second_best/image.png">
+                </a>
+            </h2>
+            <h2 class="album modeling">
+                <a href="archive/midnight_blues_u/midnight_blues_u.html">
+                    <img src="archive/midnight_blues_u/cover.png" class="pica">
+                </a>
+            </h2>
+            <h2 class="modeling poster">
+                <img src="archive/black_mamba/poster2.png">
+            </h2>
+            <h2 class="album">
+                <img src="archive/moon_would_you/moon.png">
+            </h2>
+            <h2 class="album modeling">
+                <a href="archive/altoona/altoona.html">
+                    <img src="archive/altoona/altoona cover.png" class="pica">
+                </a>
+            </h2>
+            <h2 class="poster">
+                <a href="archive/contemporary_art_expression/contemporary.html">
+                    <img src="archive/contemporary_art_expression/1.png" class="pica" style="object-position:0px -10px">
+                </a>
+            </h2>
+            <h2 class="video">
+                <a href="archive/micro_nova/micro nova.html">
+                    <img src="archive/micro_nova/6.png" class="pica">
+                </a>
+            </h2>
+            <h2 class="poster">
+                <a href="archive/caught_in_the_middle/caught.html">
+                    <img src="archive/caught_in_the_middle/po1.png" class="pica">
+                </a>
+            </h2>
+            <h2 class="editorial">
+                <img src="archive/vanilla_chi/cover.png">
+            </h2>
+            <h2 class="editorial">
+                <a href="archive/a_pile_of_poo/a_pile_of_poo.html">
+                    <img src="archive/a_pile_of_poo/poo1.png" class="pica">
+                </a>
+            </h2>
+            <h2 class="modeling poster">
+                <a href="archive/letter_a/letter_a.html">
+                    <img src="archive/letter_a/purple.png" class="pica">
+                </a>
+            </h2>
+            <h2 class="branding">
+                <a href="archive/millerknoll/millerknoll.html">
+                    <img src="archive/millerknoll/bc.png" class="pica">
+                </a>
+            </h2>
+        </div>
     </body>
 </html>
