--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <script src="main.js"></script>
         
         <title>Valia Liu</title>
-        <link rel="icon" href="icon.png">
+        <link rel="icon" href="icon.png?">
     </head>
 
     <style>
