--- a/index.html
+++ b/index.html
@@ -116,6 +116,26 @@
 
 
             <div class="pic2">
+                <!-- <a href="archive/midnight_blues_u/midnight_blues_u.html"> -->
+                    <img src="archive/last words/last words.png" class="pic21">
+                </a>
+                <!-- <a href="archive/midnight_blues_u/midnight_blues_u.html"> -->
+                    <span style="width: 49.2%; display:block; float:right;">
+                    <video width="100%" height="auto" autoplay loop>
+                        <source src="archive/last words/last words spotify.mov" type="video/mp4">
+                      Your browser does not support the video tag.
+                    </video>
+                </span>
+                </a>
+            </div>
+            <br>
+            <h1 class="title">
+                <!-- <a href="archive/midnight_blues_u/midnight_blues_u.html"> -->
+                    Last Words<br>Album Cover & Spotify Canvas Design</a></h1>
+            <br><hr><br><br>
+
+
+            <div class="pic2">
                 <a href="archive/altoona/altoona.html">
                     <img src="archive/altoona/altoona cover.png" class="pic21 pica">
                 </a>
@@ -225,6 +245,9 @@
             </h2>
             <h2 class="album">
                 <img src="archive/moon_would_you/moon.png">
+            </h2>
+            <h2 class="album">
+                <img src="archive/last words/last words.png">
             </h2>
             <h2 class="album modeling">
                 <a href="archive/altoona/altoona.html">
