--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
             .title {
                 margin-top: 3%;
             }
+
+            #lastwordsv {
+                display: none !important;
+            }
         }
     </style>
 
@@ -120,12 +124,12 @@
                     <img src="archive/last words/last words.png" class="pic21">
                 </a>
                 <!-- <a href="archive/midnight_blues_u/midnight_blues_u.html"> -->
-                    <span style="width: 49.2%; display:block; float:right;">
-                    <video width="100%" height="auto" autoplay loop>
-                        <source src="archive/last words/last words spotify.mov" type="video/mp4">
-                      Your browser does not support the video tag.
-                    </video>
-                </span>
+                    <span style="width: 49.2%; display:block; float:right;" id="lastwordsv">
+                        <video width="100%" height="auto" autoplay loop>
+                            <source src="archive/last words/last words spotify.mov" type="video/mp4">
+                        Your browser does not support the video tag.
+                        </video>
+                    </span>
                 </a>
             </div>
             <br>
