--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 <!-- <a href="archive/midnight_blues_u/midnight_blues_u.html"> -->
                     <span style="width: 49.2%; display:block; float:right;" id="lastwordsv">
                         <video width="100%" height="auto" autoplay loop>
-                            <source src="archive/last words/last words spotify.mov" type="video/mp4">
+                            <source src="archive/last words/last words spotify.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                         </video>
                     </span>
