--- a/about.html
+++ b/about.html
@@ -87,7 +87,7 @@
                 <a href="https://vimeo.com/user189269341" target="_blank" style="text-decoration:underline;">Vimeo</a><br>
                 <br>
                 Working Experience:<br>
-                Eden – Branding, visual system, and web design.<br>
+                <a href="https://0xeden.com/" target="_blank" style="text-decoration:underline;">Eden</a> – Logo design, pitch deck layout refine, and web design.<br>
                 <a href="https://www.shsymphony.com/" target="_blank" style="text-decoration:underline;">Shanghai Symphony Orchestra</a> – Designer assistant.<br>
                 <a href="https://www.shphschool.com/" target="_blank" style="text-decoration:underline;">Shanghai Pinghe Bilingual School</a> – Visual identities for school size activities and ceremonies, yearbook cover for the class of 2019.
             </h2>
