--- a/index.html
+++ b/index.html
@@ -94,29 +94,14 @@
             <br><hr><br><br>
 
 
-            <!-- <a href="archive/midnight_blues_u/midnight_blues_u.html"> -->
+            <!-- <a href="archive/midnight_blues_u/midnight_blues_u.html">
                 <div style="padding:65% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/773168796?autoplay=1&loop=1&autopause=0&muted=1"  frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Second Best"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
             </a>
             <br><br>
             <h1 class="title">
-                <!-- <a href="archive/midnight_blues_u/midnight_blues_u.html"> -->
-                    Black Mamba<br>Letter Design & Motion Poster</a></h1>
-            <br><hr><br><br>
-
-
-            <div class="pic2">
-                <!-- <a href="archive/midnight_blues_u/midnight_blues_u.html"> -->
-                    <img src="archive/moon_would_you/moon.png" class="pic21">
-                </a>
-                <!-- <a href="archive/midnight_blues_u/midnight_blues_u.html"> -->
-                    <img src="archive/moon_would_you/moond.png" class="pic22">
-                </a>
-            </div>
-            <br>
-            <h1 class="title">
-                <!-- <a href="archive/midnight_blues_u/midnight_blues_u.html"> -->
-                    Moon, would you<br>Album Cover Design</a></h1>
-            <br><hr><br><br>
+                <a href="archive/midnight_blues_u/midnight_blues_u.html"> -->
+                    <!-- Black Mamba<br>Letter Design & Motion Poster</a></h1>
+            <br><hr><br><br> -->
 
 
             <div class="pic2">
@@ -163,6 +148,16 @@
                 </a>
             </div><br>
             <h1 class="title"><a href="archive/contemporary_art_expression/contemporary.html">Contemporary Art Expression<br>Poster Design</a></h1>
+            <br><hr><br><br>
+
+
+            <a href="archive/jungle_daydreaming/jungledaydreaming.html">
+                <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/806540127?autoplay=1&loop=1&autopause=0&muted=1"  frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Second Best"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+            </a>
+            <br><br>
+            <h1 class="title">
+                <a href="archive/jungle_daydreaming/jungledaydreaming.html">
+                    Jungle Daydreaming<br>Digital Compositing Video</a></h1>
             <br><hr><br><br>
 
             
@@ -212,18 +207,6 @@
             <br><hr><br><br>
 
 
-            <div class="pic2">
-                <a href="archive/letter_a/letter_a.html">
-                    <img src="archive/letter_a/purple.png" class="pic21 pica">
-                </a>
-                <a href="archive/letter_a/letter_a.html">
-                    <img src="archive/letter_a/green.png" class="pic22 pica">
-                </a>
-            </div><br>
-            <h1 class="title"><a href="archive/letter_a/letter_a.html">Letter A<br>Letter Design & Poster</a></h1>
-            <br><hr><br><br>
-
-
             <a href="archive/millerknoll/millerknoll.html">
                 <img src="archive/millerknoll/bc.png" class="pic pica">
             </a>
@@ -244,7 +227,7 @@
                     <img src="archive/midnight_blues_u/cover.png" class="pica">
                 </a>
             </h2>
-            <h2 class="modeling poster">
+            <h2 class="poster video">
                 <img src="archive/black_mamba/poster2.png">
             </h2>
             <h2 class="album">
@@ -261,6 +244,11 @@
             <h2 class="poster">
                 <a href="archive/contemporary_art_expression/contemporary.html">
                     <img src="archive/contemporary_art_expression/1.png" class="pica" style="object-position:0px -10px">
+                </a>
+            </h2>
+            <h2 class="video">
+                <a href="archive/jungle_daydreaming/jungledaydreaming.html">
+                    <img src="archive/jungle_daydreaming/display.png" class="pica">
                 </a>
             </h2>
             <h2 class="video">
