--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
                 <input type="checkbox" id="modelingc"><span id="modeling">&nbsp Modeling</span>
                 <input type="checkbox" id="brandingc"><span id="branding">&nbsp Branding</span>
             </h1>
+            <h1 class="button" id="all">All</h1>
+            <h1 class="button" id="clear">Clear</h1>
             <hr>
             <h1><a href="about.html">About</a></h1>
             <h1><a href="mailto:valialiuwork@gmail.com" target="_blank">Email↗</a></h1>
@@ -71,6 +73,72 @@
 
 
         <div class="home main">
+            <!-- <a href="archive/midnight_blues_u/midnight_blues_u.html"> -->
+            <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/844393114?autoplay=1&loop=1&autopause=0&muted=1"  frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Second Best"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+            </a>
+            <br><br>
+            <h1 class="title">
+                <!-- <a href="archive/midnight_blues_u/midnight_blues_u.html"> -->
+                    Graphic Design *<i>Jail </i>*<br>Multimedium Degree Project</a></h1>
+            <br><hr><br><br>
+
+            <a href="archive/millerknoll/millerknoll.html">
+                <img src="archive/millerknoll/logo.png" style="display:inline-block; width: 42.1%;" class="pica">
+                <img src="archive/millerknoll/bc.png" style="display:block; width: 56.1%; float: right;" class="pica">
+            </a>
+            <br><br>
+            <h1 class="title"><a href="archive/millerknoll/millerknoll.html">MillerKnoll Workspace Research Library<br>Branding</a></h1>
+            <br><hr><br><br>
+
+
+            <div class="pic2">
+                <!-- <a href="archive/midnight_blues_u/midnight_blues_u.html"> -->
+                    <img src="archive/vanilla_chi/cover.png" class="pic21">
+                </a>
+                <!-- <a href="archive/midnight_blues_u/midnight_blues_u.html"> -->
+                    <img src="archive/vanilla_chi/inner.png" class="pic22">
+                </a>
+            </div>
+            <br>
+            <h1 class="title">
+                <!-- <a href="archive/midnight_blues_u/midnight_blues_u.html"> -->
+                    Stillness, Geometric, Nostalgia.<br>Interview & Newsprint Layout</a></h1>
+            <br><hr><br><br>
+
+
+            <a href="archive/jungle_daydreaming/jungledaydreaming.html">
+                <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/806540127?autoplay=1&loop=1&autopause=0&muted=1"  frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Second Best"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+            </a>
+            <br><br>
+            <h1 class="title">
+                <a href="archive/jungle_daydreaming/jungledaydreaming.html">
+                    Jungle Daydreaming<br>Digital Compositing Video</a></h1>
+            <br><hr><br><br>
+
+            <div class="pic">
+                <!-- <a href="archive/midnight_blues_u/midnight_blues_u.html"> -->
+                    <img src="aa.png" class="pic">
+                </a>
+            </div>
+            <br>
+            <h1 class="title">
+                <!-- <a href="archive/midnight_blues_u/midnight_blues_u.html"> -->
+                    Tears In Ocean<br>Web Design</a></h1>
+            <br><hr><br><br>
+
+        
+            <div class="pic2">
+                <a href="archive/contemporary_art_expression/contemporary.html">
+                    <img src="archive/contemporary_art_expression/1.png" class="pic21 pica">
+                </a>
+                <a href="archive/contemporary_art_expression/contemporary.html">
+                    <img src="archive/contemporary_art_expression/2.png" class="pic22 pica">
+                </a>
+            </div><br>
+            <h1 class="title"><a href="archive/contemporary_art_expression/contemporary.html">Contemporary Art Expression<br>Poster Design</a></h1>
+            <br><hr><br><br>
+
+
             <!-- <a href="archive/midnight_blues_u/midnight_blues_u.html"> -->
                 <div style="padding:75% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/789396762?autoplay=1&loop=1&autopause=0&muted=1"  frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Second Best"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
             </a>
@@ -104,27 +172,20 @@
             <br><hr><br><br> -->
 
 
-            <div class="pic2">
-                <!-- <a href="archive/midnight_blues_u/midnight_blues_u.html"> -->
-                    <img src="archive/last words/last words.png" class="pic21">
-                </a>
-                <!-- <a href="archive/midnight_blues_u/midnight_blues_u.html"> -->
-                    <span style="width: 49.2%; display:block; float:right;" id="lastwordsv">
-                        <video width="100%" height="auto" autoplay loop>
-                            <source src="archive/last words/last words spotify.mp4" type="video/mp4">
-                        Your browser does not support the video tag.
-                        </video>
-                    </span>
-                </a>
+            <!-- <a href="archive/midnight_blues_u/midnight_blues_u.html"> -->
+                <img src="archive/last words/last words.png" class="pic21">
+            </a>
+            <div style="width:49.2%; display:block; float:right; margin-top: -2px;">
+                <div style="padding:100% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/844393756?autoplay=1&loop=1&autopause=0&muted=1"  frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Second Best"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
             </div>
-            <br>
+            <br><br>
             <h1 class="title">
                 <!-- <a href="archive/midnight_blues_u/midnight_blues_u.html"> -->
                     Last Words<br>Album Cover & Spotify Canvas Design</a></h1>
-            <br><hr><br><br>
+            <!-- <br><hr><br><br> -->
 
 
-            <div class="pic2">
+            <!-- <div class="pic2">
                 <a href="archive/altoona/altoona.html">
                     <img src="archive/altoona/altoona cover.png" class="pic21 pica">
                 </a>
@@ -136,39 +197,17 @@
             <h1 class="title">
                 <a href="archive/altoona/altoona.html">
                     Altoona<br>Album Cover Design & Set Building</a></h1>
-            <br><hr><br><br>
-
-
-            <div class="pic2">
-                <a href="archive/contemporary_art_expression/contemporary.html">
-                    <img src="archive/contemporary_art_expression/1.png" class="pic21 pica">
-                </a>
-                <a href="archive/contemporary_art_expression/contemporary.html">
-                    <img src="archive/contemporary_art_expression/2.png" class="pic22 pica">
-                </a>
-            </div><br>
-            <h1 class="title"><a href="archive/contemporary_art_expression/contemporary.html">Contemporary Art Expression<br>Poster Design</a></h1>
-            <br><hr><br><br>
-
-
-            <a href="archive/jungle_daydreaming/jungledaydreaming.html">
-                <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/806540127?autoplay=1&loop=1&autopause=0&muted=1"  frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Second Best"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
-            </a>
-            <br><br>
-            <h1 class="title">
-                <a href="archive/jungle_daydreaming/jungledaydreaming.html">
-                    Jungle Daydreaming<br>Digital Compositing Video</a></h1>
-            <br><hr><br><br>
+            <br><hr><br><br> -->
 
             
-            <div style="padding:56.39% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/789396542?autoplay=1&loop=1&autopause=0&muted=1"  frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Second Best"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+            <!-- <div style="padding:56.39% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/789396542?autoplay=1&loop=1&autopause=0&muted=1"  frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Second Best"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
             <br><br>
             <h1 class="title"><a href="archive/micro_nova/micro nova.html">MicroNova<br>Frame-by-frame Animation</a></h1>
             <br>
-            <hr><br><br>
+            <hr><br><br> -->
 
 
-            <div class="pic2">
+            <!-- <div class="pic2">
                 <a href="archive/caught_in_the_middle/caught.html">
                     <img src="archive/caught_in_the_middle/po1.png" class="pic21 pica">
                 </a>
@@ -177,23 +216,8 @@
                 </a>
             </div><br>
             <h1 class="title"><a href="archive/caught_in_the_middle/caught.html">Caught In The Middle<br>Poster Design</a></h1>
-            <br><hr><br><br>
-
-
-            <div class="pic2">
-                <!-- <a href="archive/midnight_blues_u/midnight_blues_u.html"> -->
-                    <img src="archive/vanilla_chi/cover.png" class="pic21">
-                </a>
-                <!-- <a href="archive/midnight_blues_u/midnight_blues_u.html"> -->
-                    <img src="archive/vanilla_chi/inner.png" class="pic22">
-                </a>
-            </div>
-            <br>
-            <h1 class="title">
-                <!-- <a href="archive/midnight_blues_u/midnight_blues_u.html"> -->
-                    Stillness, Geometric, Nostalgia.<br>Interview & Newsprint Layout</a></h1>
-            <br><hr><br><br>
-
+            <br><hr><br><br> -->
+<!-- 
 
             <div class="pic2">
                 <a href="archive/a_pile_of_poo/a_pile_of_poo.html">
@@ -204,19 +228,39 @@
                 </a>
             </div><br>
             <h1 class="title"><a href="archive/a_pile_of_poo/a_pile_of_poo.html">I Can Text You A Pile Of Poo, But I Can’t Write My Name.<br>Website & Zine</a></h1>
-            <br><hr><br><br>
+            <br><hr><br><br> -->
 
 
-            <a href="archive/millerknoll/millerknoll.html">
-                <img src="archive/millerknoll/bc.png" class="pic pica">
-            </a>
-            <br><br>
-            <h1 class="title"><a href="archive/millerknoll/millerknoll.html">MillerKnoll Workspace Research Library<br>Branding</a></h1>
-            <!-- <br><hr><br><br> -->
+
         </div>
 
 
         <div class="home filter">
+
+            <h2 class="poster video">
+                <!-- <a href="archive/midnight_blues_u/midnight_blues_u.html"> -->
+                    <img src="archive/graphic_design_jail/icon.png">
+                </a>
+            </h2>
+            <h2 class="branding">
+                <a href="archive/millerknoll/millerknoll.html">
+                    <img src="archive/millerknoll/bc.png" class="pica">
+                </a>
+            </h2>
+            <h2 class="editorial">
+                <img src="archive/vanilla_chi/cover.png">
+            </h2>
+            <h2 class="video">
+                <a href="archive/jungle_daydreaming/jungledaydreaming.html">
+                    <img src="archive/jungle_daydreaming/display.png" class="pica">
+                </a>
+            </h2>
+
+            <h2 class="poster">
+                <a href="archive/contemporary_art_expression/contemporary.html">
+                    <img src="archive/contemporary_art_expression/1.png" class="pica" style="object-position:0px -10px">
+                </a>
+            </h2>
             <h2 class="video">
                 <!-- <a href="archive/midnight_blues_u/midnight_blues_u.html"> -->
                     <img src="archive/second_best/image.png">
@@ -227,34 +271,16 @@
                     <img src="archive/midnight_blues_u/cover.png" class="pica">
                 </a>
             </h2>
-            <h2 class="poster video">
-                <img src="archive/black_mamba/poster2.png">
-            </h2>
-            <h2 class="album">
-                <img src="archive/moon_would_you/moon.png">
-            </h2>
             <h2 class="album">
                 <img src="archive/last words/last words.png">
             </h2>
-            <h2 class="album modeling">
-                <a href="archive/altoona/altoona.html">
-                    <img src="archive/altoona/altoona cover.png" class="pica">
-                </a>
+
+
+            <h2 class="album">
+                <img src="archive/moon_would_you/moon.png">
             </h2>
-            <h2 class="poster">
-                <a href="archive/contemporary_art_expression/contemporary.html">
-                    <img src="archive/contemporary_art_expression/1.png" class="pica" style="object-position:0px -10px">
-                </a>
-            </h2>
-            <h2 class="video">
-                <a href="archive/jungle_daydreaming/jungledaydreaming.html">
-                    <img src="archive/jungle_daydreaming/display.png" class="pica">
-                </a>
-            </h2>
-            <h2 class="video">
-                <a href="archive/micro_nova/micro nova.html">
-                    <img src="archive/micro_nova/6.png" class="pica">
-                </a>
+            <h2 class="poster video">
+                <img src="archive/black_mamba/poster2.png">
             </h2>
             <h2 class="poster">
                 <a href="archive/caught_in_the_middle/caught.html">
@@ -262,11 +288,18 @@
                 </a>
             </h2>
             <h2 class="editorial">
-                <img src="archive/vanilla_chi/cover.png">
-            </h2>
-            <h2 class="editorial">
                 <a href="archive/a_pile_of_poo/a_pile_of_poo.html">
                     <img src="archive/a_pile_of_poo/poo1.png" class="pica">
+                </a>
+            </h2>
+            <h2 class="album modeling">
+                <a href="archive/altoona/altoona.html">
+                    <img src="archive/altoona/altoona cover.png" class="pica">
+                </a>
+            </h2>
+            <h2 class="video">
+                <a href="archive/micro_nova/micro nova.html">
+                    <img src="archive/micro_nova/6.png" class="pica">
                 </a>
             </h2>
             <h2 class="modeling poster">
@@ -274,11 +307,7 @@
                     <img src="archive/letter_a/purple.png" class="pica">
                 </a>
             </h2>
-            <h2 class="branding">
-                <a href="archive/millerknoll/millerknoll.html">
-                    <img src="archive/millerknoll/bc.png" class="pica">
-                </a>
-            </h2>
+
         </div>
     </body>
 </html>
