--- a/index.html
+++ b/index.html
@@ -39,8 +39,13 @@
                 margin-top: 3%;
             }
 
-            #lastwordsv {
+            #lastwordsv, #millerknoll1 {
                 display: none !important;
+            }
+
+            #millerknoll2 {
+                width: 100% !important;
+                margin-bottom: 24px;
             }
         }
     </style>
@@ -83,8 +88,8 @@
             <br><hr><br><br>
 
             <a href="archive/millerknoll/millerknoll.html">
-                <img src="archive/millerknoll/logo.png" style="display:inline-block; width: 42.1%;" class="pica">
-                <img src="archive/millerknoll/bc.png" style="display:block; width: 56.1%; float: right;" class="pica">
+                <img src="archive/millerknoll/logo.png" style="display:inline-block; width: 42.1%;" class="pica" id="millerknoll1">
+                <img src="archive/millerknoll/bc.png" style="display:block; width: 56.1%; float: right;" class="pica" id="millerknoll2">
             </a>
             <br><br>
             <h1 class="title"><a href="archive/millerknoll/millerknoll.html">MillerKnoll Workspace Research Library<br>Branding</a></h1>
@@ -175,7 +180,7 @@
             <!-- <a href="archive/midnight_blues_u/midnight_blues_u.html"> -->
                 <img src="archive/last words/last words.png" class="pic21">
             </a>
-            <div style="width:49.2%; display:block; float:right; margin-top: -2px;">
+            <div style="width:49.2%; display:block; float:right; margin-top: -2px;" id="lastwordsv">
                 <div style="padding:100% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/844393756?autoplay=1&loop=1&autopause=0&muted=1"  frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Second Best"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
             </div>
             <br><br>
