--- a/about.html
+++ b/about.html
@@ -69,6 +69,8 @@
                 <input type="checkbox" id="modelingc"><span id="modeling">&nbsp Modeling</span>
                 <input type="checkbox" id="brandingc"><span id="branding">&nbsp Branding</span>
             </h1>
+            <h1 class="button disable" id="all">All</h1>
+            <h1 class="button disable" id="clear">Clear</h1>
             <hr>
             <h1><a href="about.html">About</a></h1>
             <h1><a href="mailto:valialiuwork@gmail.com" target="_blank">Email↗</a></h1>
