--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@
 
 
         <div class="home main">
-            <!-- <a href="archive/midnight_blues_u/midnight_blues_u.html"> -->
+            <a href="archive/graphic_design_jail/graphic_design_jail.html">
             <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/844393114?autoplay=1&loop=1&autopause=0&muted=1"  frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Second Best"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
             </a>
             <br><br>
             <h1 class="title">
-                <!-- <a href="archive/midnight_blues_u/midnight_blues_u.html"> -->
+                <a href="archive/graphic_design_jail/graphic_design_jail.html">
                     Graphic Design *<i>Jail </i>*<br>Multimedium Degree Project</a></h1>
             <br><hr><br><br>
 
@@ -98,10 +98,10 @@
 
             <div class="pic2">
                 <!-- <a href="archive/midnight_blues_u/midnight_blues_u.html"> -->
-                    <img src="archive/vanilla_chi/cover.png" class="pic21">
+                    <img src="archive/stillness_geometric_nostalgia/cover.png" class="pic21">
                 </a>
                 <!-- <a href="archive/midnight_blues_u/midnight_blues_u.html"> -->
-                    <img src="archive/vanilla_chi/inner.png" class="pic22">
+                    <img src="archive/stillness_geometric_nostalgia/inner.png" class="pic22">
                 </a>
             </div>
             <br>
@@ -243,8 +243,8 @@
         <div class="home filter">
 
             <h2 class="poster video">
-                <!-- <a href="archive/midnight_blues_u/midnight_blues_u.html"> -->
-                    <img src="archive/graphic_design_jail/icon.png">
+                <a href="archive/graphic_design_jail/graphic_design_jail.html">
+                    <img src="archive/graphic_design_jail/icon.png" class="pica">
                 </a>
             </h2>
             <h2 class="branding">
@@ -253,7 +253,7 @@
                 </a>
             </h2>
             <h2 class="editorial">
-                <img src="archive/vanilla_chi/cover.png">
+                <img src="archive/stillness_geometric_nostalgia/cover.png">
             </h2>
             <h2 class="video">
                 <a href="archive/jungle_daydreaming/jungledaydreaming.html">
