--- a/index.html
+++ b/index.html
@@ -97,17 +97,32 @@
 
 
             <div class="pic2">
-                <!-- <a href="archive/midnight_blues_u/midnight_blues_u.html"> -->
-                    <img src="archive/stillness_geometric_nostalgia/cover.png" class="pic21">
+                <a href="archive/stillness_geometric_nostalgia/stillness_geometric_nostalgia.html">
+                    <img src="archive/stillness_geometric_nostalgia/cover.png" class="pic21 pica">
                 </a>
-                <!-- <a href="archive/midnight_blues_u/midnight_blues_u.html"> -->
-                    <img src="archive/stillness_geometric_nostalgia/inner.png" class="pic22">
+                <a href="archive/stillness_geometric_nostalgia/stillness_geometric_nostalgia.html">
+                    <img src="archive/stillness_geometric_nostalgia/inner.png" class="pic22 pica">
                 </a>
             </div>
             <br>
             <h1 class="title">
-                <!-- <a href="archive/midnight_blues_u/midnight_blues_u.html"> -->
+                <a href="archive/stillness_geometric_nostalgia/stillness_geometric_nostalgia.html">
                     Stillness, Geometric, Nostalgia.<br>Interview & Newsprint Layout</a></h1>
+            <br><hr><br><br>
+
+
+            <div class="pic">
+                <a href="archive/charting_the_present/charting_the_present.html">
+                    <img src="archive/charting_the_present/cover2.png" class="pic21 pica" style="width: 42.1%">
+                </a>
+                <a href="archive/charting_the_present/charting_the_present.html">
+                    <img src="archive/charting_the_present/pages.png" class="pic22 pica" style="width: 56.2%">
+                </a>
+            </div>
+            <br>
+            <h1 class="title">
+                <a href="archive/charting_the_present/charting_the_present.html">
+                    Charting the Present<br>Magazine Design</a></h1>
             <br><hr><br><br>
 
 
@@ -120,16 +135,16 @@
                     Jungle Daydreaming<br>Digital Compositing Video</a></h1>
             <br><hr><br><br>
 
-            <div class="pic">
-                <!-- <a href="archive/midnight_blues_u/midnight_blues_u.html"> -->
+            <!-- <div class="pic">
+                <a href="archive/midnight_blues_u/midnight_blues_u.html">
                     <img src="aa.png" class="pic">
                 </a>
             </div>
             <br>
             <h1 class="title">
-                <!-- <a href="archive/midnight_blues_u/midnight_blues_u.html"> -->
+                <a href="archive/midnight_blues_u/midnight_blues_u.html">
                     Tears In Ocean<br>Web Design</a></h1>
-            <br><hr><br><br>
+            <br><hr><br><br> -->
 
         
             <div class="pic2">
@@ -242,7 +257,7 @@
 
         <div class="home filter">
 
-            <h2 class="poster video">
+            <h2 class="poster video editorial">
                 <a href="archive/graphic_design_jail/graphic_design_jail.html">
                     <img src="archive/graphic_design_jail/icon.png" class="pica">
                 </a>
@@ -253,7 +268,14 @@
                 </a>
             </h2>
             <h2 class="editorial">
-                <img src="archive/stillness_geometric_nostalgia/cover.png">
+                <a href="archive/stillness_geometric_nostalgia/stillness_geometric_nostalgia.html">
+                    <img src="archive/stillness_geometric_nostalgia/cover.png" class="pica">
+                </a>
+            </h2>
+            <h2 class="editorial">
+                <a href="archive/charting_the_present/charting_the_present.html">
+                    <img src="archive/charting_the_present/cover2.png" class="pica">
+                </a>
             </h2>
             <h2 class="video">
                 <a href="archive/jungle_daydreaming/jungledaydreaming.html">
@@ -280,6 +302,10 @@
                 <img src="archive/last words/last words.png">
             </h2>
 
+
+            <h2 class="branding">
+                <img src="archive/JLT/bc.png">
+            </h2>
 
             <h2 class="album">
                 <img src="archive/moon_would_you/moon.png">
