--- a/index.html
+++ b/index.html
@@ -159,12 +159,12 @@
             <br><hr><br><br>
 
 
-            <!-- <a href="archive/midnight_blues_u/midnight_blues_u.html"> -->
+            <a href="archive/second_best/second_best.html">
                 <div style="padding:75% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/789396762?autoplay=1&loop=1&autopause=0&muted=1"  frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Second Best"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
             </a>
             <br><br>
             <h1 class="title">
-                <!-- <a href="archive/midnight_blues_u/midnight_blues_u.html"> -->
+                <a href="archive/second_best/second_best.html">
                     Second Best<br>Frame-by-frame Animation</a></h1>
             <br><hr><br><br>
 
@@ -182,25 +182,15 @@
             <br><hr><br><br>
 
 
-            <!-- <a href="archive/midnight_blues_u/midnight_blues_u.html">
-                <div style="padding:65% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/773168796?autoplay=1&loop=1&autopause=0&muted=1"  frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Second Best"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
-            </a>
-            <br><br>
-            <h1 class="title">
-                <a href="archive/midnight_blues_u/midnight_blues_u.html"> -->
-                    <!-- Black Mamba<br>Letter Design & Motion Poster</a></h1>
-            <br><hr><br><br> -->
-
-
-            <!-- <a href="archive/midnight_blues_u/midnight_blues_u.html"> -->
-                <img src="archive/last words/last words.png" class="pic21">
+            <a href="archive/last words/last_words.html">
+                <img src="archive/last words/last words.png" class="pic21 pica">
             </a>
             <div style="width:49.2%; display:block; float:right; margin-top: -2px;" id="lastwordsv">
                 <div style="padding:100% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/844393756?autoplay=1&loop=1&autopause=0&muted=1"  frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Second Best"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
             </div>
             <br><br>
             <h1 class="title">
-                <!-- <a href="archive/midnight_blues_u/midnight_blues_u.html"> -->
+                <a href="archive/last words/last_words.html">
                     Last Words<br>Album Cover & Spotify Canvas Design</a></h1>
             <!-- <br><hr><br><br> -->
 
@@ -289,8 +279,8 @@
                 </a>
             </h2>
             <h2 class="video">
-                <!-- <a href="archive/midnight_blues_u/midnight_blues_u.html"> -->
-                    <img src="archive/second_best/image.png">
+                <a href="archive/second_best/second_best.html">
+                    <img src="archive/second_best/image.png" class="pica">
                 </a>
             </h2>
             <h2 class="album modeling">
@@ -299,7 +289,9 @@
                 </a>
             </h2>
             <h2 class="album">
-                <img src="archive/last words/last words.png">
+                <a href="archive/last words/last_words.html">
+                    <img src="archive/last words/last words.png" class="pica">
+                </a>
             </h2>
 
 
